[package]
name = "svg-trace"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
visioncortex = "0.6"
